...
                      Text('Explore'),
                    ],
                  ),
                ),
              ),
              SizedBox(
                key: Key("requestPage"),
                width: 55,
                child: InkWell(
                  onTap: () {
                    Navigator.of(context).pushReplacement(MaterialPageRoute(
                        builder: (context) => RequestScreen(type: 'Pending')));
                  },
...
                    Navigator.of(context).pushReplacement(
                        MaterialPageRoute(builder: (context) => HomeScreen(currentCategory: 'Popular',sort: 'Default')));
                  },
                  child: Column(
                    children: const [
                      Icon(Icons.home),
                      Text('Home'),
                    ],
                  ),
                ),
              ),
              SizedBox(
                width: 55,
...
